# PengyR

./: .gitignore  Cargo.toml  LICENSE  README.md  SPEC.md  build_deb.sh  build_linux.sh  build_macos.sh  build_windows.bat  check_release.sh  install.sh  install_macos_cli.sh  run_pengy.sh
.github/workflows/: ci.yml  release.yml
appimage/: build.sh  pengy.desktop
cli/: Cargo.toml
cli/src/: main.rs
gui/: CMakeLists.txt  Info.plist  chathistory.cpp  chathistory.h  chatinput.cpp  chatinput.h  chatview.cpp  chatview.h  chatworker.cpp  chatworker.h  main.cpp  mainwindow.cpp  mainwindow.h  pengy_ffi.h  resources.qrc  settingsdialog.cpp  settingsdialog.h  tasksdialog.cpp  tasksdialog.h  themehelper.h  version.h.in
gui/build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  pengy_chatview_markdown_test
gui/build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
gui/build_test/pengy_chatview_markdown_test_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
gui/build_test/pengy_chatview_markdown_test_autogen/EWIEGA46WW/: moc_chatview.cpp  moc_chatview.cpp.d
gui/tests/: test_chatview_markdown.cpp
src/: chat_manager.rs  config.rs  image_utils.rs  lib.rs  llm_client.rs  task_manager.rs  tools.rs
src/core/: mod.rs
tests/: chat_cache.rs
web/: Cargo.toml
web/src/: main.rs
