[workspace]
members = [".", "cli", "web"]

[package]
name = "pengy_core"
version = "1.4.1"
edition = "2021"
authors = ["Pat Wendorf <dungeons@gmail.com>"]
description = "Pengy core library — config, chat, tools, LLM client"
repository = "https://github.com/patw/PengyR"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

# Windows-specific: needed for static linking on MSVC
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = "0.48"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "http2"], default-features = false }

# Browser-impersonating HTTP client (TLS/JA3/JA4/HTTP2 fingerprinting)
primp = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Regex
regex = "1"

# XDG dirs
dirs = "5"

# UUID
uuid = { version = "1", features = ["v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Misc
once_cell = "1"
futures-util = "0.3"
url = "2"
walkdir = "2"
scraper = "0.21"
rand = "0.8"
image = "0.25"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = "thin"

# CI profile: skip LTO entirely to avoid OOM on 7GB runners
[profile.ci]
inherits = "release"
lto = false
incremental = true
