[package]
name = "pengy-web"
version = "1.2.6"
edition = "2021"
authors = ["Pat Wendorf <dungeons@gmail.com>"]
description = "Pengy Web UI — browser-based interface"
repository = "https://github.com/patw/PengyR"

[[bin]]
name = "pengy-web"
path = "src/main.rs"

[dependencies]
pengy_core = { path = ".." }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
futures-util = "0.3"
regex = "1"
